# JustOkay

./: .gitignore  BUILD.md  DATA_STORAGE.md  DELAYS.md  EXTRACTION_AUDIT.md  MAN.md  README.md  Untitled  auto_verify.py  aws_setup.sh  aws_setup_v3.sh  backup_to_s3.sh  bhulekh-http-instance2.service  bhulekh-http-subarnapur.service  bhulekh-instance2.service  bhulekh.service  bhulekh_scraper.py  bhulekh_scraper.spec  boot.sh  commands.txt  deploy_spot.sh  diagnose_missing_villages.py  diagnose_village.py  districts.txt  export_csv.py  export_data.py  export_flat_csv.py  export_to_folders.py  export_unified_s3.py  find_empty_plots.py  find_missing_csvs.py  http_scraper.py  http_scraper_v3.py  install_browsers.py  install_browsers.spec  launch_r5_fleet.sh  main.py  playwright_district_scraper.py  pyproject.toml  pyvenv.cfg  (+28 more)
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  deploy_export.py  deploy_verifier.py
verification_output/: 12878_399.html  18411_177.html  19764_156_55.html  23227_500.html  23790_17.html  29091_584.html  30166_415_323.html  33765_441.html  3618_103.html  37261_774_51.html  39906_85.html  4320_117.html  5412_47.html  57205_213.html  7548_6.html  8108_150_7.html
verification_output/test_capture/: form20_achyutapali_khatiyan1.html
