[project]
name = "bhulekhautomation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "pyinstaller>=6.18.0",
    "uvicorn>=0.47.0",
]
